--- a/css/main.css
+++ b/css/main.css
@@ -11,3 +11,40 @@ body {
   text-align: right;
   margin: 1em;
 }
+
+/* CUSTOMIZE THE CAROUSEL
+-------------------------------------------------- */
+
+/* Carousel base class */
+.carousel {
+}
+
+/* Since positioning the image, we need to help out the caption */
+.carousel-caption {
+  z-index: 10;
+}
+
+/* Declare heights because of positioning of img element */
+.carousel .item .container {
+}
+
+.carousel-inner .item .container {
+  position: relative;
+  padding-bottom: 66%;
+}
+.carousel .item .container img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+}
+
+.carousel-caption {
+  top: 0;
+  width: 100%;
+  right: 0;
+  left: 0;
+  margin: 0;
+  height: 50px;
+  background: rgba(0,0,0,0.3);
+}
