--- a/_includes/carousel.html
+++ b/_includes/carousel.html
@@ -20,7 +20,7 @@
           <div class="container">
             <img class="second-slide" src="images/slide2.jpg" alt="Second slide">
             <div class="carousel-caption">
-              我们的使命是合作共享，聚智集贤，立足纽约，放眼中美
+              孵化扶持服务新创企业，是蜂巢聚创的根本宗旨。
             </div>
           </div>
         </div>
