--- a/_includes/carousel.html
+++ b/_includes/carousel.html
@@ -13,6 +13,7 @@
             <img class="first-slide" src="images/slide1.jpg" alt="First slide">
             <div class="carousel-caption">
               蜂巢聚创是一批热心创业的人士发起的创业服务平台
+              <br/>iBeehub was created by a group of enthusiastic entrepreneurs with the goal of helping people launch their ideas. 
             </div>
           </div>
         </div>
@@ -21,6 +22,7 @@
             <img class="second-slide" src="images/slide2.jpg" alt="Second slide">
             <div class="carousel-caption">
               孵化扶持服务新创企业，是蜂巢聚创的根本宗旨。
+              <br/>iBeehub not only provides the funding capital, but it also focuses on building healthy relationships with resourceful professionals who have the right skills to take ideas from concept to reality.
             </div>
           </div>
         </div>
@@ -29,6 +31,7 @@
             <img class="third-slide" src="images/slide3.jpg" alt="Third slide">
             <div class="carousel-caption">
               我们提供全方位和全媒体的服务
+              <br/>We provide a full range of media and comprehensive services.
             </div>
           </div>
         </div>
